# python-project-50

./: .gitignore  README.md  pyproject.toml  setup.cfg
.github/workflows/: pyci.yml
gendiff/: __init__.py  constants.py  dict_builder.py  generator.py  parser.py
gendiff/formatters/: __init__.py  json.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
tests/: conftest.py  test_diff.py  test_gendiff_cli.py  test_generator.py  test_parser.py
tests/fixtures/: diff_flat.json  file_nested1.yml  file_nested2.yml  help_output.txt  json_file.json
